# HackathonCrisisHidrica

./: Entrenamiento Modelo.ipynb  README.md  TARP_modificado.csv  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  modelo_entrenado.pkl
.ipynb_checkpoints/: Entrenamiento Modelo-checkpoint.ipynb  Untitled2-checkpoint.ipynb
AI-Irrigation-System-main/: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
AI-Irrigation-System-main/.github/workflows/: tests.yml
AI-Irrigation-System-main/models/: knn_model.pkl
AI-Irrigation-System-main/src/siri/: dataset.py  models.py  utils.py
AI-Irrigation-System-main/tests/: test_build.py  test_dataset.py  test_models.py
