[metadata]
name = smart-irrigation
version = 0.0.2
description = A package for training ML models for smart irrigation systemes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mogomaa79/AI-Irrigation-System
template_author = Omar Abdelgawad
author =  Mohamed Gomaa
author_email = mohamed.abdullah@ejust.edu.eg
keywords = KNN, Random Forest, Smart Irrigation, Machine Learning, Data Science
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
install_requires = file: requirements.txt
    joblib==1.3.2
    numpy==1.26.2
    pandas==2.1.4
    scikit-learn==1.3.2
    xgboost==2.0.3
python_requires = >=3.8
zip_safe = no

[options.packages.find]
where = src
; exclude =
;     tests

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    pylint>=2.9
    tox>=3.24
    flake8>=3.9

[options.package_data]
siri = py.typed

[flake8]
max-line-length = 160